Redid the design to drop the trapezoids and parallelograms, in favor of rounded corners.

--- a/packages/overlays/html/hypestmonthly/ingame/index.html
+++ b/packages/overlays/html/hypestmonthly/ingame/index.html
@@ -16,11 +16,9 @@
 	<div class="scoreboard" id="scoreboard">
         <aside class="sidebar">
             <div class="sidebar-box cam">
-                CAM 1
             </div>
 
             <div class="sidebar-box cam">
-                CAM 2
             </div>
 
             <div class="sidebar-box event-logo">
@@ -30,7 +28,6 @@
             </div>
 
             <div class="sidebar-box logos">
-                Sponsor
             </div>
             
             <div v-if="scoreboard" class="streaming">
@@ -59,87 +56,49 @@
 
         <main v-if="scoreboard" class="game">
             <div class="entrants" v-if="scoreboard.entrants">
-                <div v-if="scoreboard.entrants[0]" class="entrant">
-                    <div class="players" v-if="scoreboard.entrants[0].players">
-                        <div class="parallelogram-l-wrapper" v-for="player in scoreboard.entrants[0].players">
-                            <div class="player parallelogram-l-inner" >
-                                <div class="player-country" v-if="player.country">
-                                    <span class="flag-icon flag-icon-squared"
-                                        :class="'flag-icon-' + player.country.code">
-                                    </span>
-                                </div>
-                                <div class="player-name">
-                                    <em v-if="player.sponsor">
-                                        {{ player.sponsor }}
-                                    </em>
-                                    {{ player.name }}
-                                </div>
-                                <div class="player-character"
-                                    v-if="player.character && isFilled(player.character.id)">
-                                    <span class="player-character-color"
-                                        :style="getCharacterColorStyle(player.character)">
-                                    </span>
-                                    <img :src="getCharacterUrl(player.character)" />
-                                </div>
-                            </div>
->
-                        </div>
-                    </div>
-
-                    <div class="parallelogram-l-wrapper">
-                        <div class="entrant-score parallelogram-l-inner">
-                            {{ scoreboard.entrants[0].score }}
-                        </div>
-                    </div>
-
+                <div class="tournament-round-wrapper" v-if="isFilled(scoreboard.round)">
+                    <span class="tournament-round gradient-round">
+                        {{ scoreboard.round }}
+                    </span>
                 </div>
-
-                <div class="scoreboard-logo-wrapper trapezoid-wrapper">
-                    <div class="scoreboard-logo-bg trapezoid-inner">
-                        <img class="scoreboard-logo-img" src="../img/scoreboard-logo.png" />
-                    </div>
-                </div>
-
-                <div v-if="scoreboard.entrants[1]" class="entrant">
-                    <div class="parallelogram-r-wrapper">
-                        <div class="parallelogram-r-inner entrant-score">
-                            {{ scoreboard.entrants[1].score }}
-                        </div>
+                <div class="entrant"
+                    :class="'entrant-' + entrantIndex" v-for="(entrant, entrantIndex) in scoreboard.entrants">
+                    <div class="entrant-score gradient-score">
+                        {{ entrant.score }}
                     </div>
 
-                    <div class="players" v-if="scoreboard.entrants[1].players">
-                        <div class="parallelogram-r-wrapper" v-for="player in scoreboard.entrants[1].players">
-                            <div class="player parallelogram-r-inner">
-                                <div class="player-country" v-if="player.country">
-                                    <span class="flag-icon flag-icon-squared"
-                                        :class="'flag-icon-' + player.country.code">
-                                    </span>
-                                </div>
-                                <div class="player-name">
-                                    <em v-if="player.sponsor">
-                                        {{ player.sponsor }}
-                                    </em>
-                                    {{ player.name }}
-                                </div>
-                                <div class="player-character"
-                                    v-if="player.character && isFilled(player.character.id)">
-                                    <span class="player-character-color"
-                                        :style="getCharacterColorStyle(player.character)">
-                                    </span>
-                                    <img :src="getCharacterUrl(player.character)" />
-                                </div>
+                    <div class="entrant-players">
+                        <div class="entrant-player gradient-player" v-for="player in entrant.players">
+
+
+                            <div class="entrant-player-character entrant-player-item"
+                                v-if="player.character && isFilled(player.character.id)"
+                                :style="getCharacterColorStyle(player.character)">
+
+                                <img :src="getCharacterUrl(player.character)"/>
                             </div>
-                        </div>
 
+
+                            <div class="entrant-player-name entrant-player-item">
+                                <em v-if="player.sponsor">
+                                    {{ player.sponsor }}
+                                </em>
+                                {{ player.name }}
+                            </div>
+
+                            <div class="entrant-player-country entrant-player-item" v-if="player.country">
+                                <span class="flag-icon flag-icon-squared"
+                                    :class="'flag-icon-' + player.country.code">
+                                </span>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <div class="tournament">
-                <div class="tournament-round" v-if="isFilled(scoreboard.round)">
-                    {{ scoreboard.round }}
-                </div>
-            </div>
+            <footer class="game-footer">
+                <img class="game-footer-logo" src="../img/footer-logo.png">
+            </footer>
         </main>
 	</div>
 	
