--- a/packages/overlays/html/melee/singles/index.html
+++ b/packages/overlays/html/melee/singles/index.html
@@ -129,7 +129,7 @@
 		</div>
 	</div>
 	
-	<script src="/lib/vue/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 	<script src="js/hypest-score.js"></script>
 </body>
 </html>
